fixed spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,11 @@ h1 {
   color: #f6b100; 
   margin-top: 20px; 
 }
+.timer {
+  font-size:  24px;
+  margin-top: 0; 
+
+}
 
 #crying-button-container button {
   font-size: 24px;
